Removed scrollbar on autocomplete and fixed clipping problem Imported some code from Mootools

--- a/sport-war/src/main/webapp/static/pimp/sport_pimp.css
+++ b/sport-war/src/main/webapp/static/pimp/sport_pimp.css
@@ -1232,6 +1232,9 @@ form.workoutEditor {
     display: none;
 }
 
+#participant_choices {
+}
+
 .editingParticipantsList .editButton ,
 .notEditingParticipantsList .applyButton ,
 .notEditingParticipantsList input ,
@@ -1254,7 +1257,3 @@ form.workoutEditor {
     background-position: -180px 0;
 }
 
-.editingParticipantsList .autocomplete {
-    overflow: auto;
-    height: 66px;
-}
